@@ -204,6 +204,8 @@ int SetDefaultValues()
     result |= SLPPropertySet("net.slp.traceDrop","false");
     result |= SLPPropertySet("net.slp.traceDATraffic","false");
     result |= SLPPropertySet("net.slp.isDA","false");
+    result |= SLPPropertySet("net.slp.DAHeartBeat","10800");
+
     result |= SLPPropertySet("net.slp.securityEnabled","false");
     result |= SLPPropertySet("net.slp.checkSourceAddr","true");
 #ifdef WIN32
