@@ -10,7 +10,7 @@
 
 
 #----------------------------------------------------------------------------
-# Static Scope and DA Configuration
+# Static Scope and Static DA Configuration
 #----------------------------------------------------------------------------
 
 # This option is a comma delimited list of strings indicating the only scopes
@@ -22,6 +22,46 @@
 # this setting is not used dynamic DA discovery will be used to determine
 # which DAs to use.  (Default is to use dynamic DA discovery)
 ;net.slp.DAAddresses = myDa1,myDa2,myDa3
+
+
+#----------------------------------------------------------------------------
+# DA Specific Configuration
+#----------------------------------------------------------------------------
+
+# Enables slpd to function as a DA. Only a very few DAs should exist.  It 
+# is suggested that the administrator read the OpenSLP users guide before
+# enabling this setting. Default is false.  Uncomment the line below to 
+# enable DA operation.
+;net.slp.isDA = true
+
+# A 32 bit integer giving the number of seconds for the DA heartbeat. 
+# Default is 3 hours (10800 seconds).  This property corresponds to
+# the protocol specification parameter CONFIG_DA_BEAT [7].  Ignored 
+# if isDA is false.
+;net.slp.DAHeartBeat = 10800
+
+
+#----------------------------------------------------------------------------
+# SA Specific Configuration
+#----------------------------------------------------------------------------
+
+# If net.slp.watchRegistrationPID is set to true, local registrations made
+# with the SA via the SLPReg() API call will be monitored.  If the PID of the
+# process (and/or thread on Linux) disappears (the registering process died
+# unexpectedly with out calling SLPDereg()), then the registration is 
+# automatically de-registered.  (Default value is true.  Uncomment the line
+# below to disable PID watching.
+;net.slp.watchRegistrationPID = false
+
+
+#----------------------------------------------------------------------------
+# UA Specific Configuration
+#----------------------------------------------------------------------------
+# A 32 bit integer giving the maximum number of results to accumulate and 
+# return for a synchronous request before the timeout, or the maximum number
+# of results to return through a callback if the request results are 
+# reported asynchronously (default value is 256).
+;net.slp.maxResults = 256
 
 
 #----------------------------------------------------------------------------
@@ -121,38 +161,6 @@
 # address checking.
 ;net.slp.checkSourceAddr=false
 
-#----------------------------------------------------------------------------
-# DA Specific Configuration
-#----------------------------------------------------------------------------
-
-# Enables slpd to function as a DA. Only a very few DAs should exist.  It 
-# is suggested that the administrator read the OpenSLP users guide before
-# enabling this setting. Default is false.  Uncomment the line below to 
-# enable DA operation.
-;net.slp.isDA = true
-
-
-#----------------------------------------------------------------------------
-# SA Specific Configuration
-#----------------------------------------------------------------------------
-
-# If net.slp.watchRegistrationPID is set to true, local registrations made
-# with the SA via the SLPReg() API call will be monitored.  If the PID of the
-# process (and/or thread on Linux) disappears (the registering process died
-# unexpectedly with out calling SLPDereg()), then the registration is 
-# automatically de-registered.  (Default value is true.  Uncomment the line
-# below to disable PID watching.
-;net.slp.watchRegistrationPID = false
-
-
-#----------------------------------------------------------------------------
-# UA Specific Configuration
-#----------------------------------------------------------------------------
-# A 32 bit integer giving the maximum number of results to accumulate and 
-# return for a synchronous request before the timeout, or the maximum number
-# of results to return through a callback if the request results are 
-# reported asynchronously (default value is 256).
-;net.slp.maxResults = 256
 
 #----------------------------------------------------------------------------
 # Tracing and Logging
