@@ -83,9 +83,6 @@
 #define SLPD_CONFIG_DA_FIND         900  /* minimum delay between active   */
                                          /* discovery requests (15 min)    */
                                                                     
-#define SLPD_CONFIG_DA_BEAT         10800 /* default passive discover delay*/
-                                          /* 3 hours                       */
-
 #define SLPD_AGE_INTERVAL           15   /* age every 15 seconds           */
 
 
